[package]
name = "mqqt_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
protobuf = "3.3.0"
rand = "0.8.5"
regex = "1.10.3"
serde_json = "1.0.114"
tokio = "1.36.0"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
protobuf-codegen = "3.4.0"
